# QLiteMVVM

./: .gitignore  CMakeLists.txt
Plot/: Axis.cc  Axis.h  CMakeLists.txt  Graph.cc  Graph.h  Plot.cc  Plot.h  migrate.py
Plot/QCustomPlot/: CMakeLists.txt  qcustomplot.cpp  qcustomplot.h
Plot/src/: core.h
Plot/src/axis/: range.h
Plot/src/layoutelements/: layoutelement-axisrect.h
Plot/src/plottables/: plottable-graph.h
ProcessWorkbench/: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.h
ProcessWorkbench/UI/: mainwindow.ui
ProcessWorkbench/Widgets/: ConsoleWidget.cc  ConsoleWidget.h
QLiteMVVM/: CMakeLists.txt
QLiteMVVM/Command/: Script.cc  Script.h
QLiteMVVM/DependencyObject/: DependencyObject  Object.cc  Object.h  ObjectListener.cc  ObjectListener.h  Property.cc  Property.h  Variant.cc  Variant.h
QLiteMVVM/Global/: Logger.cpp  Logger.h
QLiteMVVM/Widget/: PropertyTableView.cc  PropertyTableView.h  TreeWidget.cc  TreeWidget.h  Widget.cc  Widget.h
samples/: CMakeLists.txt  myObject.cc  myObject.h  testMyObject.cc  testPlot.cc  testdemo.cc
